# MarkRight

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FLUSH.md  LICENSE  README.md  TO-DOS.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.bugs/: BUG-2026-03-02-light-theme-low-contrast.md
.cargo/: config.toml
.claude/: dod.md
.github/: FUNDING.yml
.github/workflows/: build.yml
crates/markright-core/: Cargo.toml
crates/markright-core/src/: ast.rs  config.rs  frontmatter.rs  lib.rs  license.rs  parser.rs  search.rs  toc.rs  tree.rs
crates/markright-syntax/: Cargo.toml
crates/markright-syntax/src/: lib.rs  themes.rs
infra/: LICENSE-PIPELINE.md
infra/keygen/: Cargo.toml
infra/keygen/src/: main.rs
infra/license-worker/: package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
infra/license-worker/src/: crypto.ts  index.ts  polar.ts  resend.ts  types.ts
src/: App.tsx
src-tauri/: Cargo.toml  desktop-template.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  state.rs
src/components/layout/: ContentArea.tsx  LeftSidebar.tsx  ResizeHandle.tsx  RightSidebar.tsx  StatusBar.tsx  ThreePanel.tsx
src/components/license/: ProBadge.tsx  UpgradePrompt.tsx
src/components/markdown/: CodeBlock.tsx  MdLink.tsx  MdRenderer.tsx
src/components/search/: FindBar.tsx  SearchPanel.tsx
src/components/toc/: TocPanel.tsx
src/lib/: highlight.ts  paths.ts  tauri.ts  types.ts
src/stores/: actions.ts  app.ts
src/styles/: global.css
tests/fixtures/: sample.md
(+4 files in other folders)
