[package]
name = "markright-app"
version = "0.2.3"
edition = "2024"
description = "MarkRight - A native Markdown viewer"
license = "AGPL-3.0-only"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
markright-core = { path = "../crates/markright-core" }
tauri-plugin-opener = "2.5.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
