[package]
name = "markright-core"
version = "0.1.0"
edition = "2024"
description = "Core library for MarkRight - Markdown parsing, tree building, search"
license = "AGPL-3.0-only"

[dependencies]
comrak = { version = "0.36", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
