[package]
name = "markright-core"
version = "0.2.0"
edition = "2024"
description = "Core library for MarkRight - Markdown parsing, tree building, search"
license = "AGPL-3.0-only"

[dependencies]
base64 = "0.22"
comrak = { version = "0.36", default-features = false }
ed25519-dalek = { version = "2", features = ["std"] }
markright-syntax = { path = "../markright-syntax" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
